Criação de elementos com título e tipo - OK

--- a/teste.html
+++ b/teste.html
@@ -9,10 +9,21 @@
 <body>
     
     <h2>New Containers</h2>
+    <input type="text" id="inputContainer">
+    <br>
+
+    <label for="optionList">Opções:</label>
+    <select  name="optionList" id="optionList" onChance="update()">
+            <option value="text">Texto pequeno</option>
+            <option value="textarea">Texto grande</option>
+            <option value="radio">Escolhas</option>
+    </select>
+
+    <br>
+
     <div id="div-container">
     </div>
 
 </body>
-
     <script type="text/javascript" src="jsTestes.js"></script>
 </html>
